2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-method-rank): Get info for virtual groups last.

2010-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-method-rank): Replace equalp with equal.

	* nnmh.el (nnmh-request-list-1): Bind `file'.

	* pop3.el (pop3-set-process-query-on-exit-flag): New function that's an
	alias to set-process-query-on-exit-flag or process-kill-without-query.
	(pop3-open-server): Use it.

2010-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-delete-crash-box): Always move the crash
	box to the Incoming file.  Fixes mistake in previous checkin.

	* pop3.el (pop3-send-streaming-command): Off-by-one error on the
	request loop (for debugging purposes) removed.

	* nnml.el (nnml-save-nov): Message around nnml-save-nov so that the
	culprit is more visible.
	(nnml-save-incremental-nov, nnml-open-incremental-nov)
	(nnml-add-incremental-nov): New functions to do "incremental" nov
	updates, where we just append to the end of the existing nov files
	without reading/writing them in full.

	* mail-source.el (mail-source-delete-crash-box): Really only check the
	incoming files once in a while.

	* pop3.el (pop3-streaming-movemail): Always close the pop3 connection.

	* mail-source.el (mail-source-delete-crash-box): Only check the
	incoming files for deletion once per day to save a lot of file
	accesses.

	* pop3.el (pop3-logon): Fix up unbound variable typo.

	* mail-source.el (pop3-streaming-movemail): Autoload.

	* pop3.el (pop3-streaming-movemail): Respect
	pop3-leave-mail-on-server.

	* mail-source.el (mail-source-fetch-pop): Use streaming pop3
	retrieval.

	* pop3.el (pop3-process-filter): Removed unused function.
	(pop3-streaming-movemail, pop3-send-streaming-command)
	(pop3-wait-for-messages, pop3-write-to-file)
	(pop3-number-of-responses): New functions for streaming pop3
	retrieval.

	* gnus-start.el (gnus-get-unread-articles): Protect against groups that